k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infinity-legal
  labels:
    name: infinity-legal
